[package]
name = "pingora_fuckabout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
futures-util = "0.3.30"
http = "1.1.0"
http-body-util = "0.1.1"
hyper = "=1.2.0"
pingora = "0.1.0"
reqwest = "0.11.25"
tokio = { version = "1.36.0", features = ["full"] }
bytes = "1.5.0"
http-body = "1.0.0"
mime = "0.3.17"
sync_wrapper = { version = "0.1.2", features = ["futures"] }
log = "0.4.21"
